--- a/templates/head.html
+++ b/templates/head.html
@@ -13,6 +13,7 @@
     <!--META KEYWORDS-->
     <meta name="keywords" content="ZZAK, ZZAKARIYA, ZZAK-Blog, FINANCE BLOG, PROGRAMMING BLOG, PROGRAMMING,PYTHON, PYTHON 3, DJANGO, DJANGO 3, FINANCE, ECONOMICS,CRYPTO, CRYPTOCURRENCY, BITCOIN, STOCKS, REAL ESTATE, INVESTING, VALUE INVESTING ">
     <!--REST OF META DATA-->
+    <meta name="msvalidate.01" content="A14BDF8AA558B2CA8538DD2F56789DA7" />
     <meta name="google-site-verification" content="Vx6pVNgBPLF8FoIYTXafRsYYWLu5dNPuoQ5SR8OozO0" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <meta name="robots" content="all,follow">
