--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
                   <a href="#">{{ cat }}</a>
                   {% endfor %}
                   </div>
-              </div><a href="#">
+              </div><a href="{{obj.get_absolute_url}}">
                 <h3 class="h4">{{ obj.title }}</h3></a>
               <p class="text-muted limit">{{ obj.overview|safe|linebreaks|truncatechars:200 }}</p>
             </div>
